# cooper

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  devenv.sh  travis_build.sh
.github/workflows/: cmake-multi-platform.yml
cmake/: cooperConfig.cmake  cooperConfig.cmake.in  version.h.in
examples/: CMakeLists.txt  out_file.cpp  shared_keyval.cpp  swarm.cpp
include/cooper/: actor.h  func_wrapper.h  task_queue.h  thread_queue.h  timer.h  work_thread.h
src/: CMakeLists.txt  actor.cpp  timer.cpp  work_thread.cpp
src/cooper/: actor.h  thread_queue.h  work_thread.h
tests/: timer_test.cpp  work_test.cpp
tests/unit/: CMakeLists.txt  catch2_version.h  func_wrapper_test.cpp  test_func_wrapper.cpp  test_task_queue.cpp  test_timer.cpp  test_work.cpp  unit_tests.cpp
